--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hombre Libre</title>
-  <link rel="icon" href="/img/icon.jpg">
+  <link rel="icon" href="https://thumbs.dreamstime.com/b/man-icon-men-message-333201562.jpg">
 </head>
 
 <body>
